--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,8 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
-
+gems:
+  - jekyll-inline-svg
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
