--- a/hugo.toml
+++ b/hugo.toml
@@ -4,6 +4,28 @@ title = 'tecnoter.io'
 uglyURLs = false
 theme = "tecnoter.io"
 
+[params]
+  defaultMode = "terminal"
+  description = "Electronic Art, Web3, & Low-tech Engineering."
+  author = "tecnoter"
+  images = ["/assets/tt_logo_hor.svg"]
+
+  [[params.social]]
+    name = "github"
+    url = "https://github.com/tecnoter"
+  [[params.social]]
+    name = "twitter"
+    url = "https://twitter.com/tecnoter"
+  [[params.social]]
+    name = "bluesky"
+    url = "https://bsky.app/profile/tecnoter.io"
+
+  [params.systemInfo]
+    uptime = "42 days, 13:07"
+    loadAverage = "0.42, 0.38, 0.45"
+    motdSuggestion = "Type 'help' to see available commands. Use Ctrl+D or 'logout' to exit."
+    nodeName = "tecnoter.io node 1"
+
 [outputs]
   home = ["HTML", "JSON", "SearchIndex", "RSS"]
   section = ["HTML", "JSON"]
