config: Update hub_frame.html and hugo.toml
- hub_frame.html: Changed hub links to use real URLs with data-cmd
- hugo.toml: Configuration updates for hub functionality

--- a/hugo.toml
+++ b/hugo.toml
@@ -36,6 +36,10 @@ theme = "tecnoter.io"
   mediaType = "application/json"
   rel = "searchindex"
 
+[mediaTypes]
+  [mediaTypes."application/wasm"]
+    suffixes = ["wasm"]
+
 [taxonomies]
   tag = "tags"
   category = "categories"
